[package]
name = "lynx-node"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lynxlang = "0.1.1"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]